kubernetes/downloads/radarr-uhd/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-uhd
  namespace: downloads
spec:
parentRefs:
  - name: internal
    namespace: network
  hostnames:
    - "radarr-uhd.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr-uhd
          port: 7878
